fix: background-color and spacing between game board and keyboard

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #121213;
+  width: 100vw;
+  height: 100vh;
 }
 
 .logo {
@@ -39,7 +42,7 @@
   flex-direction: column;
   height: 100%;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   position: relative;
 }
 
@@ -49,9 +52,7 @@
 
 @media screen and (max-width: 600px) {
   .card {
-    /* display: flex;
-    height: 100%; */
-
+    width: 100vw;
   }
 
   #root {
